# gniot-master-controller

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  toolchain-rpi.cmake
scripts/: build.sh  build_device.sh  build_tests.sh  create_service.sh  deploy.sh  master-controller.service
src/: CMakeLists.txt  hw_config.c  hw_config.h  main.c
src/bsp/: bsp.c  bsp.h  bspDefines.h
src/utils/: log.c  log.h
test/: CMakeLists.txt  main.c
